--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,20 @@ section {
   background-color: #e2e2e2;
   padding: 50px 0; }
 
+.h2 {
+  color: #000;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #FFFFFF;
+  font-family: Ramabhadra, sans-serif;
+  font-size: 100px;
+  font-weight: 400;
+  line-height: 1.25;
+  text-transform: uppercase; }
+
+.section__title {
+  text-align: center;
+  margin-bottom: 64px; }
+
 .button {
   width: 280px;
   height: 75px;
@@ -175,15 +189,30 @@ section {
   margin: 0 auto;
   max-width: 1203px;
   height: 712px;
-  border-radius: 5px;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000 87.86%);
-  background-image: url("../../img/slide-img/main-slide.jpg"); }
+  border-radius: 5px; }
 
 .slider__content {
-  padding-top: 299px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 30px;
   font-weight: 500;
-  line-height: 1,25; }
+  line-height: 1,25;
+  margin-bottom: 82px;
+  position: relative; }
+
+.slider-img {
+  position: relative;
+  z-index: -2; }
+
+.slider-img::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  mask-image: linear-gradient(#000, transparent); }
+
+.play-button {
+  margin-top: -260px; }
 
 .slider__content-text {
   color: #48B84A;
@@ -196,5 +225,12 @@ section {
 .slider__buttons-row {
   display: flex;
   column-gap: 25px; }
+
+.slider-controls {
+  display: flex;
+  gap: 29px; }
+
+.slider-pagination {
+  color: #626262; }
 
 /*# sourceMappingURL=main.css.map */
