--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -95,6 +95,17 @@ section {
 	padding: 50px 0;
 }
 
+.h2{
+    color: $black-color;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: $white-color;
+    font-family: Ramabhadra, sans-serif;
+    font-size: 100px;
+    font-weight: 400;
+    line-height: 1.25;
+    text-transform: uppercase;
+}
+
 
 
 
