--- a/sass/blocks/_slider.scss
+++ b/sass/blocks/_slider.scss
@@ -6,19 +6,35 @@
     margin: 0 auto;
     max-width: 1203px;
     height: 712px;
-    // flex-shrink: 0;
     border-radius: 5px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000 87.86%);
-    background-image: url("../../img/slide-img/main-slide.jpg");
+    // background-image: url("../../img/slide-img/main-slide.jpg");
+    
 }
 .slider__content {
-    padding-top: 299px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 30px;
     font-weight: 500;
     line-height: 1,25;
+    margin-bottom: 82px;
+    position: relative;
+}
+
+.slider-img{
+    position: relative;
+    z-index: -2;
+}
+
+.slider-img::before{
+    content: "";
+    position: absolute;
+    top: 0;    
+    mask-image: linear-gradient(#000, transparent);
 }
 
 .play-button {
+    margin-top: -260px;
 }
 
 .slider__content-text {
@@ -40,10 +56,13 @@
 .button-gray {
 }
 .slider-controls {
+    display: flex;
+    gap: 29px;
 }
 .slider-controls-left {
 }
-.slider-page {
+.slider-pagination {
+    color: #626262;
 }
 .slider-controls-right {
 }
