--- a/css/main.css
+++ b/css/main.css
@@ -188,8 +188,7 @@ section {
   align-items: center;
   margin: 0 auto;
   max-width: 1203px;
-  height: 712px;
-  border-radius: 5px; }
+  height: 712px; }
 
 .slider__content {
   display: flex;
@@ -202,6 +201,7 @@ section {
   position: relative; }
 
 .slider-img {
+  border-radius: 5px;
   position: relative;
   z-index: -2; }
 
