--- a/css/main.css
+++ b/css/main.css
@@ -203,13 +203,9 @@ section {
 .slider-img {
   border-radius: 5px;
   position: relative;
-  z-index: -2; }
-
-.slider-img::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  mask-image: linear-gradient(#000, transparent); }
+  z-index: -2;
+  -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
+  mask-image: linear-gradient(to top, transparent 10%, black 87.86%); }
 
 .play-button {
   margin-top: -260px; }
