--- a/sass/blocks/_slider.scss
+++ b/sass/blocks/_slider.scss
@@ -23,13 +23,8 @@
     border-radius: 5px;
     position: relative;
     z-index: -2;
-}
-
-.slider-img::before{
-    content: "";
-    position: absolute;
-    top: 0;    
-    mask-image: linear-gradient(#000, transparent);
+    -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
+    mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
 }
 
 .play-button {
