--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,6 @@ h1, h2, h3, h4, h5, h6, p {
 ul {
   list-style: none; }
 
-img, svg {
-  display: block;
-  max-width: 100%;
-  height: auto; }
-
 /* Form */
 input, textarea, button, select {
   font-family: inherit;
@@ -182,27 +177,38 @@ section {
   font-weight: 500;
   line-height: 1.735; }
 
+.courses {
+  overflow: hidden; }
+
 .slider-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  max-width: 1203px;
-  height: 712px; }
+  flex-direction: column; }
+
+.slider {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: scroll;
+  overflow-x: hidden;
+  cursor: pointer;
+  scroll-behavior: smooth; }
 
 .slider__content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 30px;
-  font-weight: 500;
-  line-height: 1,25;
-  margin-bottom: 82px;
-  position: relative; }
+  flex: 0 0 auto;
+  margin-right: 58px;
+  max-width: 1203px;
+  height: 712px;
+  margin-bottom: 82px; }
+
+.slider__content--small {
+  max-width: 1034.039px;
+  height: 612px; }
 
 .slider-img {
+  width: 100%;
   border-radius: 5px;
-  position: relative;
   z-index: -2;
   -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
   mask-image: linear-gradient(to top, transparent 10%, black 87.86%); }
@@ -211,10 +217,16 @@ section {
   margin-top: -260px; }
 
 .slider__content-text {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 1,25;
   color: #48B84A;
   margin-bottom: 18px; }
 
 .slider__content-author {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 1,25;
   color: #FFFF;
   margin-bottom: 36px; }
 
@@ -224,7 +236,12 @@ section {
 
 .slider-controls {
   display: flex;
+  justify-content: center;
   gap: 29px; }
+
+.slider-left,
+.slider-right {
+  cursor: pointer; }
 
 .slider-pagination {
   color: #626262; }
