--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -50,9 +50,9 @@ ul {
 }
 
 img, svg {
-	display: block;
-	max-width: 100%;
-	height: auto;
+	// display: block;
+	// max-width: 100%;
+	// height: auto;
 }
 
 /* Form */
