--- a/css/main.css
+++ b/css/main.css
@@ -98,9 +98,12 @@ section {
   position: relative; }
 
 /* Grid styles */
+.container-fluid {
+  max-width: 1920px;
+  margin: 0 auto; }
+
 .container {
   max-width: 1610px;
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -177,38 +180,33 @@ section {
   font-weight: 500;
   line-height: 1.735; }
 
-.courses {
-  overflow: hidden; }
-
-.slider-wrapper {
-  display: flex;
-  flex-direction: column; }
-
 .slider {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow: scroll;
-  overflow-x: hidden;
-  cursor: pointer;
-  scroll-behavior: smooth; }
-
-.slider__content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 0 0 auto;
-  margin-right: 58px;
-  max-width: 1203px;
-  height: 712px;
-  margin-bottom: 82px; }
+  width: 100%;
+  overflow: hidden; }
 
-.slider__content--small {
-  max-width: 1034.039px;
+.slider__wrapper {
+  position: relative;
+  width: 100%;
+  cursor: pointer; }
+
+.slide {
+  position: absolute;
+  height: 712px;
+  width: 1200px;
+  text-align: center;
+  transition: all 0.7s; }
+
+.slide--small {
   height: 612px; }
 
-.slider-img {
+.slide img {
   width: 100%;
+  height: 712px;
   border-radius: 5px;
+  object-fit: cover;
   z-index: -2;
   -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
   mask-image: linear-gradient(to top, transparent 10%, black 87.86%); }
@@ -232,15 +230,17 @@ section {
 
 .slider__buttons-row {
   display: flex;
-  column-gap: 25px; }
+  column-gap: 25px;
+  justify-content: center; }
 
-.slider-controls {
+.slider__btn {
+  margin-top: 730px;
   display: flex;
   justify-content: center;
   gap: 29px; }
 
-.slider-left,
-.slider-right {
+.slider__btn-prev,
+.slider__btn-next {
   cursor: pointer; }
 
 .slider-pagination {
