--- a/sass/blocks/_slider.scss
+++ b/sass/blocks/_slider.scss
@@ -24,6 +24,26 @@
     transition: all 0.7s;
 }
 
+.lable::after{
+    position: absolute;
+    content: "Beginner";
+    right: -55px;
+    top: 26px;
+    z-index: -2;
+
+    color: #FFF;
+    font-family: Ramabhadra, sans-serif;
+    font-size: 35px;
+    font-weight: 400;
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+
+    width: 55px;
+    height: 232px;
+    border-radius: 0 28px 28px 0;
+    background-color: #48B84A;
+}
+
 .slide--small{    
     height: 612px;
 }
@@ -39,7 +59,8 @@
 }
 
 .play-button {
-    margin-top: -260px;
+    margin-top: -420px;
+    margin-bottom: 58px;
 }
 
 .slider__content-text {
@@ -64,7 +85,7 @@
     justify-content: center;
 }
 .slider__btn {
-    margin-top: 730px;
+    margin-top: 780px;
     display: flex;
     justify-content: center;
     gap: 29px;
