--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   min-height: 100%;
   width: 100%;
   overflow: hidden;
-  background-image: url('img/Vector.svg');
+  background-image: url("../img/Vector.svg");
   background-position: right;
   background-repeat: no-repeat;
 }
@@ -57,7 +57,7 @@ p{
   padding-right:  38px!important;
   font-size:  19px;
   color:  #fff;
-  background-image: url('img/Union.svg');
+  background-image: url('../img/Union.svg');
   background-repeat: no-repeat;
   background-position:98px;
 
