--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,20 @@ button:hover{
     position: relative;
 }
 
+.elem_data{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 226px;
+    height: 99px;
+    border-radius: 0px 0px 10px 10px;
+    font-size: 30px;
+    position: absolute;
+    background-color: #46B249;
+    color: white;
+    top: 0;
+}
+
 
   
 
@@ -187,6 +201,25 @@ button:hover{
     justify-content: space-between;
     width: 1558px;
     height: 888px;
+    position: relative;
+}
+
+.box_classes::after{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    outline: 1px solid black;
+    outline-offset: -10px;
+    width: 224px;
+    height: 224px;
+    border-radius: 50%;
+    background-color: #46B249;
+    content: "1:50";
+    color: black;
+    right: -30px;
+    bottom: 750px;
+    font-size: 80px;
 }
 
 .wrap_classes h1{
@@ -274,12 +307,42 @@ button:hover{
 }
 
 .subscribe_btn p{
-    margin: 0 auto;
+    margin-top: 10px;
     font-weight: 300;
     font-size: 20px;
     line-height: 30px;
     color: white;
     font-family: 'Poppins', sans-serif;
+}
+
+.subscribe_btn_png{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.subscribe_btn_png .profile_icon{
+    border-radius: 10px;
+    margin-right: 10px;
+    width: 38px;
+    height: 38px;
+    border: 1px solid white;
+    position: relative;
+}
+
+.subscribe_btn_png .profile_icon::after{
+    position: absolute;
+    content: url(/img/Vector.svg);
+    left: 6px;
+    top: 23px;
+}
+
+.subscribe_btn_png .profile_icon .circle{
+    width: 12.5px;
+    height: 12.5px;
+    border-radius: 50%;
+    background-color: #46B249;
+    margin: 10px auto;
 }
 
 .subscribe_btn .btn {
@@ -405,7 +468,6 @@ button:hover{
     left: 235px;
     background-color: white;
     transform: rotate(49.29deg)
-    
 }
 
 .session_text .quantiti_session p{
