--- a/css/style.css
+++ b/css/style.css
@@ -441,10 +441,10 @@ button:hover{
 }
 
 .quantiti p{
-    margin-top: 7px
+    /* margin-top: 7px */
 }
 .quantiti_session p{
-    margin-top: 10px
+    /* margin-top: 10px */
 }
 .item1 .session_text{
     background-color: #233133;
