Subscribe section descktop

--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -10,6 +10,7 @@
     font-size: 25px;
     font-weight: 400;
     line-height: 1.81;
+    cursor: pointer;
 }
 .button-gray {
     background-color: $second-color;
