--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,14 @@
 
 // sections
 @import "./sections/courses-section";
+@import "./sections/subscribe";
+@import "./sections/footer";
+
 
 // blocks   
+@import "./blocks/input";
 @import "./blocks/buttons";
 @import "./blocks/slider";
+@import "./blocks/socials";
+@import "./blocks/navbar";
+
