--- a/css/main.css
+++ b/css/main.css
@@ -142,11 +142,7 @@ section {
 /* Sticky Footer */
 .footer {
   margin-top: auto;
-  /* sticky footer */
-  /* Just for fun */
-  text-align: center;
-  background-color: #e2e2e2;
-  padding: 50px 0; }
+  /* sticky footer */ }
 
 .h2 {
   color: #000;
@@ -162,6 +158,57 @@ section {
   text-align: center;
   margin-bottom: 64px; }
 
+.subscribe {
+  padding-top: 24px;
+  padding-bottom: 48px; }
+
+.subscribe__wrapper {
+  text-align: center; }
+
+.section__title {
+  margin-bottom: 29px; }
+
+.subscribe__message {
+  color: #FFF;
+  font-family: 'Ramabhadra', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.25;
+  text-transform: uppercase;
+  margin-bottom: 75px; }
+
+.subscribe__block .input {
+  margin-right: 8px; }
+.subscribe__block .button {
+  width: 222px; }
+
+.footer__top {
+  padding: 33px 0;
+  background-color: #233133; }
+
+.footer__copyright {
+  margin: 0 auto;
+  padding: 16px 0;
+  background-color: #000; }
+
+.footer__copyright p {
+  text-align: center;
+  color: #FFFF;
+  font-weight: 400;
+  line-height: 1.25; }
+
+input {
+  width: 715px;
+  height: 75px;
+  background-color: #233133;
+  border: none;
+  border-radius: 10px;
+  padding-left: 40px;
+  color: rgba(255, 255, 255, 0.25);
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 1.81; }
+
 .button {
   width: 280px;
   height: 75px;
@@ -172,7 +219,8 @@ section {
   color: #FFF;
   font-size: 25px;
   font-weight: 400;
-  line-height: 1.81; }
+  line-height: 1.81;
+  cursor: pointer; }
 
 .button-gray {
   background-color: #233133;
@@ -263,5 +311,32 @@ section {
 
 .slider-pagination {
   color: #626262; }
+
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 44px;
+  margin-bottom: 35px; }
+
+.social-list a {
+  display: inline-flex;
+  align-items: center;
+  flex-shrink: 0; }
+
+.svg-size {
+  height: 69px;
+  width: 69px; }
+
+.navbar__list {
+  display: flex;
+  justify-content: center;
+  gap: 100px; }
+
+.navbar__list-item {
+  color: #FFFF;
+  font-family: 'Mulish', sans-serif;
+  font-size: 20px;
+  font-weight: 400; }
 
 /*# sourceMappingURL=main.css.map */
