--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ button:hover{
 
 .wrap_plans{
 
-    width: 1579px;
+    max-width: 1579px;
     height: 770px;
     margin: 0 auto;
 }
@@ -400,13 +400,28 @@ button:hover{
 }
 
 .grid_container{
-    width: 1579px;
-    height: 770px;
+    max-width: 1579px;
+    max-height: 770px;
     margin: 0 auto;
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* display: grid;
+    grid-column-gap: 30px;
+    align-items: center; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+    /* grid-template-columns: repeat(4, 260px);
+  
+    justify-content: space-around;
+  
+    background: #ccc; */
+    /* grid-column-gap: 10px;
+    padding: 4rem 2rem; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 10px; 
-    grid-auto-columns: 1fr;
+    grid-auto-columns: 1fr; */
+    /* это тоже самое, что grid-template-columns: 1fr 1fr 1fr 1fr; */
+    /* grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); */
+    /* это тоже самое, что grid-template-rows: 300px 300px; */
+     /* grid-template-rows: repeat(2, 300px); */
     /* grid-row-gap: 10px; 
     grid-gap: 10px;
     grid-auto-columns: 1fr;
@@ -414,6 +429,10 @@ button:hover{
     /* grid-template-rows: 100px 100px 100px; */
     /* grid-auto-flow: column;
     place-items: stretch; */
+}
+
+.grid-item {
+    margin: 15px auto;
 }
 
 .session_text{
@@ -510,7 +529,7 @@ button:hover{
 	box-shadow: inset 0 0 0 3px #3a7999;
 }
 .item1 .quantiti{
-    width: 38px;
+    max-width: 38px;
     height: 38px;
     margin-right: 5px;
     border-radius: 50%;
@@ -533,8 +552,8 @@ button:hover{
 }
 
 .grid-item{
-    width: 370px;
-    height: 580px;
+    max-width: 370px;
+    max-height: 580px;
     background-color: #233133;
     border-radius: 15px;
 }
@@ -1010,6 +1029,13 @@ p {
     max-height: 100%;
     background-size: contain;
 }
+
+  /* wrap_plans */
+  /* ---------------------------------------------------------------------------------------------- */
+  /* wrap_plans */
+    .wrap_plans h1{
+        margin: 0 auto;
+    }
 }
 /* 767px */
 /* ------------------------------------------------------------------------------------------------ */
@@ -1057,6 +1083,9 @@ p {
     max-height: 500px;
     overflow: hidden;
 }
+.card_workshop .btn{
+    margin: 0;
+} 
 .classes_text .btn{
     margin: 30px auto;
     
@@ -1064,6 +1093,13 @@ p {
 .subscribe{
     margin: 0 auto;
     
+}
+
+ /* wrap_plans */
+  /* ---------------------------------------------------------------------------------------------- */
+  /* wrap_plans */
+  .wrap_plans h1{
+    font-size: 70px;;
 }
 }
 /* 480px */
@@ -1091,4 +1127,16 @@ p {
   .subscribe_btn{
     margin-bottom: 50%;
   }
+  .subscribe{
+    background-image: url(/img/om.jpg);
+  }
+  .subscribe h3{
+    color: azure;
+  }
+   /* wrap_plans */
+  /* ---------------------------------------------------------------------------------------------- */
+  /* wrap_plans */
+  .wrap_plans h1{
+    font-size: 60px;;
+    line-height: 1;
 }
