--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,20 +1,27 @@
 .button {
-    width: 280px;
-    height: 75px;
+    padding: 15px 40px;
     flex-shrink: 0;
     border-radius: 10px;
     border: 2px solid $accent-color;
     background-color: $accent-color;
-
     color: #FFF;
     font-size: 25px;
     font-weight: 400;
     line-height: 1.81;
-    cursor: pointer;
+
+    @media (max-width: 1399.98px) {
+        padding: 10px 30px;
+        font-size: 20px;
+    }
 }
 .button-gray {
     background-color: $second-color;
     border: none;
     font-weight: 500;
     line-height: 1.735;
+
+
+
 }
+
+
