--- a/sass/blocks/_input.scss
+++ b/sass/blocks/_input.scss
@@ -1,8 +1,7 @@
 input {
-    width: 715px;
-    height: 75px;
+    padding: 15px 40px;
     background-color: $second-color;
-    border: none;    
+    border: 2px solid $second-color;
     border-radius: 10px;
     padding-left: 40px;
 
@@ -10,4 +9,6 @@ input {
     font-size: 25px;
     font-weight: 400;
     line-height: 1.81; 
+
+    
 }
