--- a/sass/sections/_subscribe.scss
+++ b/sass/sections/_subscribe.scss
@@ -17,14 +17,64 @@
     line-height: 1.25; 
     text-transform: uppercase;
     margin-bottom: 75px;
+
+    @media (max-width: 1199.98px) {
+        margin-bottom: 55px;
+    }
+
+    @media (max-width: 991.98px) {
+        font-size: 16px;
+        margin-bottom: 45px;
+    }
+
+    @media (max-width: 767.98px) {
+        margin-bottom: 35px;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 14px;
+        margin-bottom: 25px;
+    }
 }
 .subscribe__block {
     .input{
+
+        width: 45%;
         margin-right: 8px;
+
+        @media (max-width: 1399.98px) {
+            padding: 10px 30px;
+        }
+    
+        @media (max-width: 991.98px) {
+            font-size: 18px;
+        }
+    
+        @media (max-width: 575.98px) {
+            width: 100%;
+            margin-bottom: 15px;
+        }
     }
 
     .button{
-        width: 222px;
+        
+
+        @media (max-width: 1399.98px) {
+            padding: 10px 20px;
+        }
+    
+        @media (max-width: 991.98px) {
+            font-size: 18px;
+        }
+    
+        @media (max-width: 767.98px) {
+            
+        }
+    
+        @media (max-width: 575.98px) {
+            width: 100%;
+        }
+
     }
 }
 
