--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,15 @@ section {
   color: #FFFF;
   font-weight: 400;
   line-height: 1.25; }
+  @media (max-width: 1199.98px) {
+    .footer__copyright p {
+      font-size: 16px; } }
+  @media (max-width: 991.98px) {
+    .footer__copyright p {
+      font-size: 14px; } }
+  @media (max-width: 575.98px) {
+    .footer__copyright p {
+      font-size: 10px; } }
 
 input {
   width: 715px;
@@ -318,6 +327,15 @@ input {
   justify-content: center;
   column-gap: 44px;
   margin-bottom: 35px; }
+  @media (max-width: 991.98px) {
+    .social-list {
+      column-gap: 27px; } }
+  @media (max-width: 767.98px) {
+    .social-list {
+      column-gap: 25px; } }
+  @media (max-width: 575.98px) {
+    .social-list {
+      column-gap: 20px; } }
 
 .social-list a {
   display: inline-flex;
@@ -327,16 +345,48 @@ input {
 .svg-size {
   height: 69px;
   width: 69px; }
+  @media (max-width: 991.98px) {
+    .svg-size {
+      height: 55px;
+      width: 55px; } }
+  @media (max-width: 767.98px) {
+    .svg-size {
+      height: 50px;
+      width: 50px; } }
+  @media (max-width: 575.98px) {
+    .svg-size {
+      height: 40px;
+      width: 40px; } }
 
 .navbar__list {
   display: flex;
   justify-content: center;
-  gap: 100px; }
+  column-gap: 100px; }
+  @media (max-width: 1199.98px) {
+    .navbar__list {
+      column-gap: 50px; } }
+  @media (max-width: 767.98px) {
+    .navbar__list {
+      column-gap: 20px; } }
+  @media (max-width: 575.98px) {
+    .navbar__list {
+      flex-direction: column;
+      align-items: center;
+      column-gap: 15px; } }
 
 .navbar__list-item {
   color: #FFFF;
   font-family: 'Mulish', sans-serif;
   font-size: 20px;
   font-weight: 400; }
+  @media (max-width: 1199.98px) {
+    .navbar__list-item {
+      font-size: 18px; } }
+  @media (max-width: 991.98px) {
+    .navbar__list-item {
+      font-size: 16px; } }
+  @media (max-width: 575.98px) {
+    .navbar__list-item {
+      font-size: 18px; } }
 
 /*# sourceMappingURL=main.css.map */
