--- a/sass/blocks/_navbar.scss
+++ b/sass/blocks/_navbar.scss
@@ -1,13 +1,40 @@
 .navbar {
+
 }
 .navbar__list {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    column-gap: 100px;
+
+    @media (max-width: 1199.98px) {
+        column-gap:50px
+    }
+
+    @media (max-width: 767.98px) {
+        column-gap: 20px;
+    }
+
+    @media (max-width: 575.98px) {
+        flex-direction: column;
+        align-items: center;
+        column-gap: 15px;
+    }
 }
 .navbar__list-item {
     color: #FFFF;
     font-family: 'Mulish', sans-serif;
     font-size: 20px;
     font-weight: 400;
+
+    @media (max-width: 1199.98px) {
+        font-size: 18px;
+    }
+
+    @media (max-width: 991.98px) {
+        font-size: 16px;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 18px;
+    }
 }
