--- a/sass/blocks/_socials.scss
+++ b/sass/blocks/_socials.scss
@@ -4,6 +4,18 @@
     justify-content: center;
     column-gap: 44px;
     margin-bottom: 35px;
+
+    @media (max-width: 991.98px) {
+        column-gap: 27px;
+    }
+
+    @media (max-width: 767.98px) {
+        column-gap: 25px;
+    }
+
+    @media (max-width: 575.98px) {
+        column-gap: 20px;
+    }
 }
 
 .social-list a{
@@ -17,4 +29,20 @@
 .svg-size{
     height: 69px;
     width: 69px;
+
+    @media (max-width: 991.98px) {
+        height: 55px;
+        width: 55px;
+
+    }
+
+    @media (max-width: 767.98px) {
+        height: 50px;
+        width: 50px;
+    }
+
+    @media (max-width: 575.98px) {
+        height: 40px;
+        width: 40px;
+    }
 }
