--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -19,4 +19,18 @@
     font-weight: 400;
     line-height: 1.25;
 
+    @media (max-width: 1199.98px) {
+        font-size: 16px;
+    }
+
+    @media (max-width: 991.98px) {
+        font-size: 14px;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 10px;
+    }
+
+
+
 }
