--- a/css/style.css
+++ b/css/style.css
@@ -1011,13 +1011,14 @@ p {
     margin: 0 auto;
     text-align: center;
     min-width: 353px;
+    min-height: 100%;
 }
 .classes_text p{
     width: 100%;
+    height: 100%;
     margin-bottom: 0;
     text-align: center;
-    max-height: 500px;
-    overflow: hidden;
+    overflow: auto;
 }
 .classes_text .btn{
     margin: 30px auto;
@@ -1063,25 +1064,31 @@ p {
     background-size: contain;
     opacity: 100%;
   }
-  .card_workshop_btn{
+  .card_workshop_btn .btn{
+    margin-top: 5px;
+    min-width: 180px;
+    max-height: 60px;
   }
+
+
     /* Upcoming Classes */
   /* ---------------------------------------------------------------------------------------------- */
   /* Upcoming Classes */
   .wrap_classes h1{
     font-size: 70px;
+    line-height: 1.2;
+    margin: 0 auto;
   }
 .classes_text{
     margin: 0 auto;
     text-align: center;
-    min-width: 400px;
 }
 .classes_text p{
     width: 100%;
     margin-bottom: 0;
     text-align: center;
-    max-height: 500px;
     overflow: hidden;
+    padding: 5px;
 }
 .card_workshop .btn{
     margin: 0;
@@ -1092,6 +1099,8 @@ p {
 }
 .subscribe{
     margin: 0 auto;
+    max-width: 400px;
+    max-height: 600px;
     
 }
 
@@ -1113,23 +1122,29 @@ p {
     visibility: hidden;
   }
   .card_workshop_btn{
-    margin-bottom: 50%;
+    /* margin-bottom: 50%; */
+  }
+  .card_workshop {
+    max-height: 400px;
   }
   .card_workshop_btn .btn {
-    margin-top: 10px;
+    margin-top: 5px;
   }
   .wrap_workshop h1{
     font-size: 50px;
+  }
+  .wrap_workshop h3{
+    visibility: hidden;
   }
       /* Upcoming Classes */
   /* ---------------------------------------------------------------------------------------------- */
   /* Upcoming Classes */
   .subscribe_btn{
-    margin-bottom: 50%;
+    /* margin-bottom: 50%; */
   }
-  .subscribe{
+  /* .subscribe{
     background-image: url(/img/om.jpg);
-  }
+  } */
   .subscribe h3{
     color: azure;
   }
@@ -1139,4 +1154,5 @@ p {
   .wrap_plans h1{
     font-size: 60px;;
     line-height: 1;
+}
 }
