--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,11 @@ h1, h2, h3, h4, h5, h6, p {
 ul {
   list-style: none; }
 
+img, svg {
+  display: block;
+  max-width: 100%;
+  height: auto; }
+
 /* Form */
 input, textarea, button, select {
   font-family: inherit;
@@ -153,6 +158,21 @@ section {
   font-weight: 400;
   line-height: 1.25;
   text-transform: uppercase; }
+  @media (max-width: 1199.98px) {
+    .h2 {
+      font-size: 80px; } }
+  @media (max-width: 767.98px) {
+    .h2 {
+      font-size: 60px; } }
+  @media (max-width: 575.98px) {
+    .h2 {
+      font-size: 35px; } }
+
+.subscribe {
+  display: none; }
+
+.footer {
+  display: none; }
 
 .section__title {
   text-align: center;
@@ -210,8 +230,8 @@ input {
   line-height: 1.81; }
 
 .button {
-  width: 280px;
-  height: 75px;
+  min-width: 200px;
+  padding: 15px 40px;
   flex-shrink: 0;
   border-radius: 10px;
   border: 2px solid #48B84A;
@@ -219,8 +239,19 @@ input {
   color: #FFF;
   font-size: 25px;
   font-weight: 400;
-  line-height: 1.81;
-  cursor: pointer; }
+  line-height: 1.81; }
+  @media (max-width: 1399.98px) {
+    .button {
+      padding: 10px 20px; } }
+  @media (max-width: 991.98px) {
+    .button {
+      min-width: 170px;
+      font-size: 18px; } }
+  @media (max-width: 767.98px) {
+    .button {
+      font-size: 14px;
+      min-width: 130px;
+      padding: 8px 15px; } }
 
 .button-gray {
   background-color: #233133;
@@ -228,57 +259,68 @@ input {
   font-weight: 500;
   line-height: 1.735; }
 
+.courses__title {
+  text-align: center;
+  margin-bottom: 64px; }
+  @media (max-width: 1199.98px) {
+    .courses__title {
+      margin-bottom: 50px; } }
+  @media (max-width: 767.98px) {
+    .courses__title {
+      margin-bottom: 30px; } }
+
 .slider {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  overflow: hidden; }
+  aspect-ratio: 1.68/1; }
 
 .slider__wrapper {
   position: relative;
-  width: 100%;
-  cursor: pointer; }
+  width: 70%; }
+  @media (max-width: 575.98px) {
+    .slider__wrapper {
+      width: 70%; } }
 
 .slide {
+  border-radius: 5px;
   position: absolute;
-  height: 712px;
-  width: 1200px;
   text-align: center;
-  transition: all 0.7s; }
-
-.lable::after {
-  position: absolute;
-  content: "Beginner";
-  right: -55px;
-  top: 26px;
-  z-index: -2;
-  color: #FFF;
-  font-family: Ramabhadra, sans-serif;
-  font-size: 35px;
-  font-weight: 400;
-  text-transform: uppercase;
-  writing-mode: vertical-rl;
-  width: 55px;
-  height: 232px;
-  border-radius: 0 28px 28px 0;
-  background-color: #48B84A; }
-
-.slide--small {
-  height: 612px; }
+  transition: all 0.3s;
+  width: 100%;
+  border-radius: 8px; }
 
 .slide img {
   width: 100%;
-  height: 712px;
-  border-radius: 5px;
+  aspect-ratio: 1.68/1;
   object-fit: cover;
+  position: relative;
   z-index: -2;
   -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
-  mask-image: linear-gradient(to top, transparent 10%, black 87.86%); }
+  mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
+  border-radius: inherit; }
 
 .play-button {
-  margin-top: -420px;
-  margin-bottom: 58px; }
+  margin-top: -35%;
+  margin-bottom: 58px;
+  display: flex;
+  justify-content: center; }
+  @media (max-width: 1199.98px) {
+    .play-button {
+      height: 80px;
+      margin-bottom: 38px; } }
+  @media (max-width: 991.98px) {
+    .play-button {
+      height: 50px;
+      margin-bottom: 10px; } }
+  @media (max-width: 767.98px) {
+    .play-button {
+      height: 40px; } }
+  @media (max-width: 575.98px) {
+    .play-button {
+      height: 25px;
+      margin-bottom: 5px; } }
 
 .slider__content-text {
   font-size: 30px;
@@ -286,6 +328,20 @@ input {
   line-height: 1,25;
   color: #48B84A;
   margin-bottom: 18px; }
+  @media (max-width: 1199.98px) {
+    .slider__content-text {
+      margin-bottom: 14px; } }
+  @media (max-width: 991.98px) {
+    .slider__content-text {
+      font-size: 18px;
+      margin-bottom: 10px; } }
+  @media (max-width: 767.98px) {
+    .slider__content-text {
+      font-size: 14px;
+      margin-bottom: 5px; } }
+  @media (max-width: 575.98px) {
+    .slider__content-text {
+      font-size: 10px; } }
 
 .slider__content-author {
   font-size: 30px;
@@ -293,21 +349,95 @@ input {
   line-height: 1,25;
   color: #FFFF;
   margin-bottom: 36px; }
+  @media (max-width: 1199.98px) {
+    .slider__content-author {
+      margin-bottom: 26px; } }
+  @media (max-width: 991.98px) {
+    .slider__content-author {
+      font-size: 24px; } }
+  @media (max-width: 767.98px) {
+    .slider__content-author {
+      font-size: 20px;
+      margin-bottom: 30px; } }
+  @media (max-width: 575.98px) {
+    .slider__content-author {
+      font-size: 14px;
+      margin-bottom: 30px; } }
 
 .slider__buttons-row {
   display: flex;
   column-gap: 25px;
   justify-content: center; }
+  @media (max-width: 767.98px) {
+    .slider__buttons-row {
+      gap: 10px; } }
+
+.lable::after {
+  position: absolute;
+  content: "Beginner";
+  right: -53.4px;
+  top: 26px;
+  color: #FFF;
+  font-family: Ramabhadra, sans-serif;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 1.25;
+  text-transform: uppercase;
+  writing-mode: vertical-rl;
+  padding: 24px 10px 24px 0;
+  border-radius: 0 28px 28px 0;
+  background-color: #48B84A; }
+  @media (max-width: 1199.98px) {
+    .lable::after {
+      font-size: 30px;
+      right: -47.1px; } }
+  @media (max-width: 991.98px) {
+    .lable::after {
+      font-size: 20px;
+      right: -35px;
+      border-radius: 0 20px 20px 0; } }
+  @media (max-width: 767.98px) {
+    .lable::after {
+      font-size: 16px;
+      right: -30px;
+      border-radius: 0 16px 16px 0; } }
+  @media (max-width: 575.98px) {
+    .lable::after {
+      font-size: 12px;
+      right: -21.0px;
+      padding: 10px 6px 10px 0;
+      border-radius: 0 10px 10px 0; } }
 
 .slider__btn {
-  margin-top: 780px;
+  margin-top: auto;
   display: flex;
   justify-content: center;
-  gap: 29px; }
+  align-items: center; }
+  @media (max-width: 991.98px) {
+    .slider__btn {
+      font-size: 16px; } }
+  @media (max-width: 767.98px) {
+    .slider__btn {
+      font-size: 14px; } }
+  @media (max-width: 575.98px) {
+    .slider__btn {
+      font-size: 14px; } }
 
 .slider__btn-prev,
 .slider__btn-next {
   cursor: pointer; }
+  @media (max-width: 991.98px) {
+    .slider__btn-prev,
+    .slider__btn-next {
+      width: 24px; } }
+  @media (max-width: 767.98px) {
+    .slider__btn-prev,
+    .slider__btn-next {
+      width: 28px; } }
+  @media (max-width: 575.98px) {
+    .slider__btn-prev,
+    .slider__btn-next {
+      width: 24px; } }
 
 .slider-pagination {
   color: #626262; }
