--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,6 +1,6 @@
 .button {
-    width: 280px;
-    height: 75px;
+    min-width: 200px;
+    padding: 15px 40px;
     flex-shrink: 0;
     border-radius: 10px;
     border: 2px solid $accent-color;
@@ -10,7 +10,25 @@
     font-size: 25px;
     font-weight: 400;
     line-height: 1.81;
-    cursor: pointer;
+    
+    @media (max-width: 1399.98px) {
+        padding: 10px 20px;
+    }
+
+    @media (max-width: 991.98px) {
+        min-width: 170px;
+        font-size: 18px;
+    }
+
+    @media (max-width: 767.98px) {
+        font-size: 14px;
+        min-width: 130px;
+        padding: 8px 15px;
+    }
+
+    @media (max-width: 575.98px) {
+        
+    }
 }
 .button-gray {
     background-color: $second-color;
