--- a/sass/blocks/_slider.scss
+++ b/sass/blocks/_slider.scss
@@ -2,65 +2,85 @@
     
 }
 
+.courses__title{
+    text-align: center;
+    margin-bottom: 64px;
+
+    @media (max-width: 1199.98px) {
+        margin-bottom: 50px;
+    }
+
+    @media (max-width: 767.98px) {
+        margin-bottom: 30px;
+    }
+
+}
+
 .slider {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    overflow: hidden;
+    // width: 100%;
+    aspect-ratio: 1.68/1;
+
 }
 
 .slider__wrapper {
     position: relative;
-    width: 100%;
-    cursor: pointer;
+    width: 70%;
+    
+    @media (max-width: 575.98px) {
+        width: 70%;
+    }
 }
 
 .slide {
+    border-radius: 5px;
     position: absolute;
-    height: 712px;
-    width: 1200px;
     text-align: center;
-    transition: all 0.7s;
+    transition: all 0.3s;        
+    width: 100%;
+    border-radius: 8px;
 }
 
-.lable::after{
-    position: absolute;
-    content: "Beginner";
-    right: -55px;
-    top: 26px;
-    z-index: -2;
-
-    color: #FFF;
-    font-family: Ramabhadra, sans-serif;
-    font-size: 35px;
-    font-weight: 400;
-    text-transform: uppercase;
-    writing-mode: vertical-rl;
-
-    width: 55px;
-    height: 232px;
-    border-radius: 0 28px 28px 0;
-    background-color: #48B84A;
-}
-
-.slide--small{    
-    height: 612px;
-}
 
 .slide img{
     width: 100%;
-    height: 712px;
-    border-radius: 5px;
+    aspect-ratio: 1.68/1;
     object-fit: cover;
+    position: relative;
     z-index: -2;
     -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
     mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
+    border-radius: inherit;
 }
 
+
 .play-button {
-    margin-top: -420px;
+    margin-top:-35%;
     margin-bottom: 58px;
+    display: flex;
+    justify-content: center;
+
+    @media (max-width: 1199.98px) {
+        height: 80px;
+        margin-bottom: 38px;
+    }
+
+    @media (max-width: 991.98px) {
+        height: 50px;
+        margin-bottom: 10px;
+    }
+
+    @media (max-width: 767.98px) {
+        height: 40px;
+    }
+
+    @media (max-width: 575.98px) {
+        height: 25px;
+        margin-bottom: 5px;
+    }
 }
 
 .slider__content-text {
@@ -69,6 +89,26 @@
     line-height: 1,25;
     color: $accent-color;
     margin-bottom: 18px;
+
+    @media (max-width: 1199.98px) {
+        margin-bottom: 14px;
+    }
+
+    @media (max-width: 991.98px) {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    @media (max-width: 767.98px) {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 10px;
+    }
+
+
 }
 
 .slider__content-author {
@@ -77,23 +117,118 @@
     line-height: 1,25;
     color: #FFFF;
     margin-bottom: 36px;
+
+    @media (max-width: 1199.98px) {
+        margin-bottom: 26px;
+    }
+
+    @media (max-width: 991.98px) {
+        font-size: 24px;
+    }
+
+    @media (max-width: 767.98px) {
+        font-size: 20px;
+        margin-bottom: 30px;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+
 }
 
 .slider__buttons-row {
     display: flex;
     column-gap: 25px;
     justify-content: center;
+
+    @media (max-width: 767.98px) {
+        gap: 10px;
+    }
 }
-.slider__btn {
-    margin-top: 780px;
+
+
+.lable::after{
+    position: absolute;
+    content: "Beginner";
+    right: -53.4px;
+    top: 26px;
+
+    color: #FFF;
+    font-family: Ramabhadra, sans-serif;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 1.25;
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    padding:  24px 10px 24px 0;
+    border-radius: 0 28px 28px 0;
+    background-color: #48B84A;
+
+    @media (max-width: 1199.98px) {
+        font-size: 30px;
+        right: -47.1px;
+    }
+
+    @media (max-width: 991.98px) {
+        font-size: 20px;
+        right: -35px;
+        border-radius: 0 20px 20px 0;
+    }
+
+    @media (max-width: 767.98px) {
+        font-size: 16px;
+        right: -30px;
+        border-radius: 0 16px 16px 0;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 12px;
+        right: -21.0px;
+        padding:  10px 6px 10px 0;
+        border-radius: 0 10px 10px 0;
+    }
+}
+
+.slider__btn {    
+    // margin-top: calc(42%);
+    margin-top: auto;
     display: flex;
     justify-content: center;
-    gap: 29px;
+    align-items: center;
+
+    @media (max-width: 991.98px) {
+        // margin-top: calc(50%);
+        font-size: 16px;
+    }
+
+    @media (max-width: 767.98px) {
+        // margin-top: calc(55%);
+        font-size: 14px;
+    }
+
+    @media (max-width: 575.98px) {
+        font-size: 14px;
+    }
+    
 }
 
 .slider__btn-prev,
 .slider__btn-next {
     cursor: pointer;
+
+    @media (max-width: 991.98px) {
+        width: 24px;
+    }
+
+    @media (max-width: 767.98px) {
+        width: 28px;
+    }
+
+    @media (max-width: 575.98px) {
+        width: 24px;
+    }
 }
 
 .slider-pagination {
