--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,173 @@
 
 body {
     background-color: bisque;
+
+}
+
+/* traning__plans */
+
+.traning__plans {
+    margin-top: 74px;
+}
+
+.traning__plans-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.traning__plans-title span {
+    color: #46B249;
+    -webkit-text-stroke: 0px;
+}
+
+.traning__plans-title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 140px;
+    line-height: 125px;
+    color: transparent;
+    -webkit-text-stroke: 1px white;
+    width: 1175px;
+    text-align: start;
+    display: inline-block;
+}
+
+.traning__plans-add {
+    margin-right: 72px;
+    position: relative;
+}
+
+.traning__plans-benefit {
+    display: inline-block;
+    background-color: #46B249;
+    padding: 8px;
+    border-radius: 50%;
+    margin-bottom: 162px;
+}
+
+.traning__plans-benefit p {
+    color: #080C14;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 0;
+    font-weight: 600;
+    border: 1px solid #000;
+    padding: 38px;
+    width: 208px;
+    height: 208px;
+    border-radius: 50%;
+}
+
+.traning__plans-plus {
+    display: inline-block;
+    text-align: center;
+    padding: 21px 11px 21px 11px;
+    background-color: #46B249;
+    border-radius: 50%;
+    position: absolute;
+    border: 1px solid #000;
+    top: 3%;
+    right: 0%;
+}
+
+.traning__plans-description p {
+    width: 555px;
+    height: 130px;
+    font-size: 25px;
+    line-height: 173.5%;
+    margin: 0 28px 0 auto;
+}
+
+.traning__plans-body {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin-top: 102px;
+    position: relative;
+    gap: 120px;
+}
+
+
+.traning__plans-body::after {
+    content: '';
+    background: url('../images/decor.svg') 0 0/ 100% no-repeat;
+    width: 820px;
+    height: 820px;
+    position: absolute;
+    top: -65px;
+    left: 29%;
+}
+
+.traning__slider {
+    width: 900px;
+    height: 670px;
+    overflow: hidden;
+    z-index: 50;
+}
+
+.traning__slider-list {
+    height: 670px;
+    display: flex;
+    position: relative;
+    left: 0;
+    transition: all ease 1s;
+}
+
+.traning__text-title {
+    color: #48B84A;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 173.5%;
+}
+
+.traning__text-discription {
+    font-size: 28px;
+    line-height: 173.5%;
+    width: 620px;
+    height: 147px;
+}
+
+.traning__plan-block {
+    align-self: end;
+}
+
+.btn-box {
+    position: relative;
+    width: 110px;
+    height: 25px;
+}
+
+.prev::before {
+    content: '';
+    width: 32px;
+    height: 17px;
+    background: url('../img/Union1.svg') 0 0 / 100% no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .3s;
+    opacity: 0.5;
+}
+
+.prev:hover::before {
+    transform: scale(1.2);
+    opacity: 1;
+}
+
+.next::before {
+    content: '';
+    width: 32px;
+    height: 17px;
+    background: url('../img/Union.svg') 0 0 / 100% no-repeat;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0.5;
+    transition: all .3s;
+}
+
+.next:hover::before {
+    transform: scale(1.2);
+    opacity: 1;
 }
 
 /* Workshops */
